test_suite/tests/ui/fail_custom_bounds_missing_skip_type_params.stderr
error: Type parameter requires a `TypeInfo` bound, so either: add it to `#[scale_info(bounds(T: TypeInfo))]`, or skip it with `#[scale_info(skip_type_params(T))]`
 --> $DIR/fail_custom_bounds_missing_skip_type_params.rs:4:10
  |
4 | #[derive(TypeInfo)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `TypeInfo` (in Nightly builds, run with -Z macro-backtrace for more info)
